# zammad-pgp-auto-import

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
src/zammad_pgp_autoimport_webhook/: __init__.py  exceptions.py  pgp.py  test_run.py  utils.py  zammad.py
tests/: test_app.py  test_backend.py  test_e2e.py  test_pgp.py  test_pgp_handler.py  test_zammad_api.py
tests/_testdata/: E499C79F53C96A54E572FEE1C06086337C50773E.asc  garbage.asc
zammad_pgp_import/: __init__.py  pgp.py  zammad.py
