[project]
name = "zammad-pgp-import"
version = "0.3.0"
description = ""
authors = [
    {name = "kmille",email = "github@androidloves.me"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "flask-basicauth (>=0.2.0,<0.3.0)",
    "mypy (>=1.16.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "zammad_pgp_import"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pdbpp>=0.12.1",
    "pytest>=9.0.2",
    "pytest-flask>=1.3.0",
    "requests-mock>=1.12.1",
    "types-requests>=2.32.4.20260107",
    "types-waitress>=3.0.1.20250801",
]

[tool.poetry.scripts]
zammad-pgp-import = 'zammad_pgp_import.__init__:main'
